--- a/Lesson-18-HW1/Lesson-18-HW1.vcxproj
+++ b/Lesson-18-HW1/Lesson-18-HW1.vcxproj
@@ -129,6 +129,10 @@
   <ItemGroup>
     <ClCompile Include="Lesson-18-HW1.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Date.h" />
+    <ClInclude Include="Employee.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
